refactoring 1 - apply static analysis results